navigation colours and spacing fixed

--- a/common/scss/_navigation.scss
+++ b/common/scss/_navigation.scss
@@ -17,7 +17,6 @@
     height: auto;
   }
   &__menu {
-    background: green;
     list-style-type: none;
     padding: 0;
     @include breakpoint('phone') {
@@ -27,16 +26,18 @@
     li {
       position: relative;
       display: inline-block;
+      font-size: 20px;
+      letter-spacing: 1px;
       @include breakpoint('phone') {
         width: 100%;
       }
       &.active {
-        background: red;
+        color: $text;
       }
       a {
-        color: $white;
+        color: $primary;
         text-decoration: none;
-        padding: 1em 1em;
+        padding: 0.5em 0;
         display: block;
         position: relative;
         @include breakpoint('phone') {
@@ -46,8 +47,8 @@
         }
         &:after {
           content: '';
-          background: $white;
-          height: 4px;
+          background: $text;
+          height: 1px;
           width: 0;
           position: absolute;
           bottom: 0;
@@ -57,10 +58,15 @@
           transition: width 0.25s ease-in-out;
         }
         &:hover {
+          color: $text;
+          transition: color 0.25s ease-in-out;
           &:after {
             width: 100%;
           }
         }
+      }
+      & + li {
+        margin-left: 1em;
       }
       &:hover {
         .menu__dropdown {
