--- a/common/scss/_palette.scss
+++ b/common/scss/_palette.scss
@@ -1,5 +1,5 @@
 $primary: #4ab176;
 $secondary: #e0ebe8;
-$grey: grey;
+$grey: #dedede;
 $white: #ffffff;
 $text: #404040;
